--- a/config.json
+++ b/config.json
@@ -14,8 +14,8 @@
         "Reck Was here?"
     ],
     "token": {
-        "bot1": "MTA5MTQzODQ1ODIzODY2ODg0MA.GlWB9U.C2h6AgqG-XGymxmvZ7Y_5r474cIQSARnQGBlQ8",
-        "bot2": "MTA5MTQzODU1MjE4MjcwMjEyMA.GW3juW.FTh1uA8P9MzrxUC4zrOy_zJn549sP6hOcHXlNA",
-        "bot3": "MTA5MTQzODY3MjA0NzUxNzcwNg.GBJC9b.zOKIzpNVBiKZWNAgx58AjRTNiGVHx-jLk-vyKc"
+        "bot1": "",
+        "bot2": "",
+        "bot3": ""
     }
 }
